Add schema upgrade scripts along with instructions to use them.

--- a/src/site/xhtml/installation.xhtml.vm
+++ b/src/site/xhtml/installation.xhtml.vm
@@ -247,6 +247,18 @@
 	where in both cases it is assumed that the tables are owned by user
 	"icat". This can be done be done while icat.server 4.7.0 is running as
 	the old code is unaware of the addition of the new column.
+	<h3>Upgrade 4.8.x or 4.9.x schema to 4.10.0</h3>
+	Some attributes have been added to Instrument, ParameterType,
+	Sample, and User and a many-to-one relationship from Shift to
+	Instrument.  So, the corresponding columns and constraints
+	must be added to the database tables.  This can be done or
+	MySQL or MariaDB by
+	<kbd>mysql -u icat -p icat &lt; upgrade_mysql_4_10.sql</kbd>
+	or for Oracle run
+	<kbd>sqlplus icat @upgrade_oracle_4_10.sql</kbd>
+	where in both cases it is assumed that the tables are owned by
+	user "icat".  This can be done be done while the older
+	icat.server is running as the changes are purely additive.
 
 	<h2>The setup.properties file</h2>
 	<dl>
