--- a/src/site/xhtml/installation.xhtml.vm
+++ b/src/site/xhtml/installation.xhtml.vm
@@ -249,7 +249,7 @@
 	the old code is unaware of the addition of the new column.
 	<h3>Upgrade 4.8.x or 4.9.x schema to 4.10.0</h3>
 	Some attributes have been added to Instrument, ParameterType,
-	Sample, and User and a many-to-one relationship from Shift to
+	Sample, Study and User and a many-to-one relationship from Shift to
 	Instrument.  So, the corresponding columns and constraints
 	must be added to the database tables.  This can be done or
 	MySQL or MariaDB by
